# battery_analysis

./: .dockerignore  .gitignore  README.md  docker-compose-release.yaml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  main.py  pyproject.toml  pyrightconfig.json  wait_for_db.py
backend/data/: convert_mat_to_csv.py  import_builtin_dataset.py  mat_read.py  read.py
backend/power_soh/: SOH_CaseA_BiLSTM.py  SoH_CaseA_DeepHPM_Sum.py
backend/src/: __init__.py  config.py  models.py  schemas.py  security.py
backend/src/routes/: __init__.py  analysis.py  auth.py  data.py  models.py  testing.py  training.py
backend/src/tasks/: parse_upload.py  testing_worker.py  training_worker.py
backend/src/tasks/model/: Baseline.py  baseline_trainer.py  bilstm_trainer.py  data_loader.py  deephpm_trainer.py  test_baseline_trainer.py
backend/src/utils/: training_utils.py
doc/: api_tutorial.md  openapi.yaml  project.md  table.md
doc/api/: README.md  authentication.md  batteries.md  errors.md  models.md  openapi.yaml  pagination.md  predictions.md  training-jobs.md  websocket.md
frontend/: .eslintcache  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.vue  main.ts
frontend/src/__tests__/: Login.spec.ts
frontend/src/api/: analysis.ts  auth.ts  data.ts  index.ts  models.ts  testing.ts  training.ts  types.ts
frontend/src/assets/: main.css
power_soh/: SOH_CaseA_BiLSTM.py  SoH_CaseA_Baseline.py  SoH_CaseA_DeepHPM_Sum.py  functions.py  pyproject.toml
(+11 files in other folders)
