[project]
name = "power-soh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn",
    "torch==2.5.0",
    "torchvision==0.20.0",
    "torchaudio==2.5.0",
    "h5py>=3.15.1",
    "matplotlib>=3.10.8",
]

[tool.uv]
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
